--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: units
 description: A starting point for measurement units in Dart.
 version: 0.0.1
-#homepage: https://www.example.com
+homepage: https://github.com/yeradis/units.dart
 author: Yeradis P. Barbosa Marrero <yeradis@gmail.com>
 
 environment:
