--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: units
 description: A starting point for measurement units in Dart.
-version: 0.0.1
+version: 0.0.2
 homepage: https://github.com/yeradis/units.dart
 author: Yeradis P. Barbosa Marrero <yeradis@gmail.com>
 
@@ -12,3 +12,5 @@ environment:
 
 dev_dependencies:
   test: ^0.12.0
+  coverage: "^0.7.0"
+  dart_codecov_generator: "^0.4.0"
