--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,12 @@ before_install:
 
 script:
   - pub run test -r expanded test/*.dart
-  - pub get --packages-dir
+  - pub get
   - pub global activate coverage
-  - pub global activate coveralls
-  - pub run dart_codecov_generator --report-on=lib/ --verbose
+  - dart --pause-isolates-on-exit --enable-vm-service=8111 test/test_all.dart &
+  - sleep 1
+  - pub global run coverage:collect_coverage --uri=http://127.0.0.1:8111/ -o coverage.json --resume-isolates
+  - pub global run coverage:format_coverage --packages=.packages -i coverage.json -o coverage.lcov --lcov --report-on=lib/
 
 after_success:
   - pub global run coveralls coverage.lcov
